--- a/components/tyk-gateway/templates/service-gw.yaml
+++ b/components/tyk-gateway/templates/service-gw.yaml
@@ -25,4 +25,5 @@ spec:
     release: {{ .Release.Name }}
 {{- if eq .Values.gateway.service.type "LoadBalancer" }}
   externalTrafficPolicy: {{ .Values.gateway.service.externalTrafficPolicy }}
+  loadBalancerIP: {{ .Values.gateway.service.loadBalancerIP | quote }}
 {{- end }}
